chore: rename project from cpp_tests to ovum-vm and update related files for consistency, including descriptions, installation script, and CI configuration.

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -29,19 +29,19 @@ jobs:
       - name: Build tests target
         shell: bash
         run: |
-          cmake --build cmake-build-debug --target cpp_tests_tests || echo Built with errors
+          cmake --build cmake-build-debug --target ovum-vm_tests || echo Built with errors
 
       - name: Run program
         working-directory: .\cmake-build-release
         shell: bash
         run: |
-          ./cpp_tests.exe --help
+          ./ovum-vm.exe --help
 
       - name: Run tests
         working-directory: .\cmake-build-debug
         shell: bash
         run: |
-          # ./cpp_tests_tests.exe
+          # ./ovum-vm_tests.exe
           echo "Tests are not run on Windows MinGW due to issues with the test runner"
 
   build-matrix:
@@ -80,22 +80,22 @@ jobs:
       - name: Build main target
         shell: bash
         run: |
-          cmake --build cmake-build-release --target cpp_tests || echo "Built with errors"
+          cmake --build cmake-build-release --target ovum-vm || echo "Built with errors"
 
       - name: Build tests target
         shell: bash
         run: |
-          cmake --build cmake-build-debug --target cpp_tests_tests || echo "Built with errors"
+          cmake --build cmake-build-debug --target ovum-vm_tests || echo "Built with errors"
 
       - name: Run program
         shell: bash
         working-directory: ./cmake-build-release
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
-            ./cpp_tests.exe --help
+            ./ovum-vm.exe --help
           else 
             cd bin
-            ./cpp_tests --help
+            ./ovum-vm --help
           fi
 
       - name: Run tests
@@ -103,10 +103,10 @@ jobs:
         working-directory: ./cmake-build-debug
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
-            ./cpp_tests_tests.exe
+            ./ovum-vm_tests.exe
           else
             cd tests
-            ./cpp_tests_tests
+            ./ovum-vm_tests
           fi
 
   memory-leaks:
@@ -125,12 +125,12 @@ jobs:
 
       - name: Build tests target
         run: |
-          cmake --build cmake-build --target cpp_tests_tests
+          cmake --build cmake-build --target ovum-vm_tests
 
       - name: Run valgrind
         working-directory: ./cmake-build/tests
         run: |
-          valgrind --leak-check=full --track-origins=yes --error-exitcode=1 ./cpp_tests_tests
+          valgrind --leak-check=full --track-origins=yes --error-exitcode=1 ./ovum-vm_tests
 
   style-check:
     name: Code style check with clang-format
