--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -211,13 +211,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install clang-tidy
+      - name: Install clang-tidy and GCC 13
         run: |
-          sudo apt-get update && sudo apt-get -y install clang-tidy
+          sudo apt-get update
+          # Install a C++23-capable toolchain and clang-tidy-19 for better C++23 support
+          sudo apt-get -y install clang-19 clang-tidy-19
 
       - name: Create CMake cache
         run: |
-          cmake -S . -B cmake-build-tidy -DCMAKE_BUILD_TYPE=Debug -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
+          cmake -S . -B cmake-build-tidy \
+            -DCMAKE_BUILD_TYPE=Debug \
+            -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
 
       - name: Run clang-tidy
         shell: bash
@@ -230,8 +234,9 @@ jobs:
             exit 0
           fi
 
-          echo "Running clang-tidy on ${#files[@]} files..."
-          clang-tidy "${files[@]}" -p cmake-build-tidy --format-style=file > tidy_output.txt 2>&1 || true
+          echo "Running clang-tidy-19 on ${#files[@]} files..."
+          # Use clang-tidy-19 for better C++23 support and --extra-arg-before to ensure C++23 standard is set before other flags
+          clang-tidy-19 "${files[@]}" -p cmake-build-tidy --format-style=file > tidy_output.txt 2>&1 || true
           
           # Ensure file exists and is readable
           if [ ! -f tidy_output.txt ]; then
