build: add new subdirectories for bytecode components and update CMakeLists.txt for modular structure

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,1 +1,6 @@
+add_subdirectory(bytecode_lexer)
+add_subdirectory(bytecode_parser)
+add_subdirectory(execution_tree)
+add_subdirectory(executor)
+add_subdirectory(runtime)
 add_subdirectory(vm_ui)
