feat: add ConditionalExecution, IfMultibranch, and WhileExecution classes for enhanced control flow management

--- a/lib/execution_tree/CMakeLists.txt
+++ b/lib/execution_tree/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_library(execution_tree STATIC
         Block.cpp
+        ConditionalExecution.cpp
+        IfMultibranch.cpp
+        WhileExecution.cpp
 )
 
 target_include_directories(execution_tree PUBLIC ${PROJECT_SOURCE_DIR})
