feat: add Function class for executing blocks with specified arity and integrate into execution tree

--- a/lib/execution_tree/CMakeLists.txt
+++ b/lib/execution_tree/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(execution_tree STATIC
         Block.cpp
         ConditionalExecution.cpp
+        Function.cpp
         IfMultibranch.cpp
         WhileExecution.cpp
 )
