feat: add FunctionRepository class for managing function executions and enhance existing execution classes with PassedExecutionData integration

--- a/lib/execution_tree/CMakeLists.txt
+++ b/lib/execution_tree/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(execution_tree STATIC
         Block.cpp
         ConditionalExecution.cpp
         Function.cpp
+        FunctionRepository.cpp
         IfMultibranch.cpp
         WhileExecution.cpp
 )
