feat: introduce Command class and command factory for dynamic command creation in execution tree

--- a/lib/execution_tree/CMakeLists.txt
+++ b/lib/execution_tree/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(execution_tree STATIC
         FunctionRepository.cpp
         IfMultibranch.cpp
         WhileExecution.cpp
+        command_factory.cpp
 )
 
 target_include_directories(execution_tree PUBLIC ${PROJECT_SOURCE_DIR})
