feat: implement CacheKey class for efficient caching of function arguments with equality operator

--- a/lib/execution_tree/CMakeLists.txt
+++ b/lib/execution_tree/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(execution_tree STATIC
         Block.cpp
+        CacheKey.cpp
         ConditionalExecution.cpp
         Function.cpp
         FunctionRepository.cpp
