feat: created executor factory

--- a/lib/executor/CMakeLists.txt
+++ b/lib/executor/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(executor STATIC
         PlaceholderJitExecutor.cpp
+        PlaceholderJitExecutorFactory.hpp
 )
 
 target_include_directories(executor PUBLIC ${PROJECT_SOURCE_DIR})
