feat: added bytecode parser to vm_ui

--- a/lib/vm_ui/CMakeLists.txt
+++ b/lib/vm_ui/CMakeLists.txt
@@ -5,6 +5,10 @@ add_library(vm_ui STATIC
 target_link_libraries(vm_ui PUBLIC
         tokens
         bytecode_lexer
+        bytecode_parser
+        execution_tree
+        runtime
+        executor
 )
 
 target_include_directories(vm_ui PUBLIC ${PROJECT_SOURCE_DIR})
