feat: added command factory

--- a/lib/bytecode_parser/CMakeLists.txt
+++ b/lib/bytecode_parser/CMakeLists.txt
@@ -7,6 +7,8 @@ add_library(bytecode_parser STATIC
         scenarios/WhileParser.cpp
         scenarios/CommandParser.cpp
         scenarios/VtableParser.cpp
+        scenarios/CommandFactory.cpp
+        scenarios/FunctionFactory.cpp
 )
 
 
