feat: add built-in functions and virtual tables for core types
This commit introduces a new `builtin_factory` and `BuiltinFunctions` implementation, which includes the registration of virtual tables for fundamental types (Int, Float, Char, Byte, Bool, String, etc.) and their associated methods. The new functionality allows for the creation, destruction, and manipulation of these types within the virtual machine, enhancing the overall capabilities of the executor. Additionally, the CMake configuration has been updated to include the new source files.

--- a/lib/executor/CMakeLists.txt
+++ b/lib/executor/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_library(executor STATIC
         PlaceholderJitExecutor.cpp
+        BuiltinFunctions.cpp
+        builtin_factory.cpp
 )
 
 target_include_directories(executor PUBLIC ${PROJECT_SOURCE_DIR})
+target_link_libraries(executor PUBLIC runtime execution_tree)
