refactor: added ICommandFactory as a parameter, renamed ParserContext

--- a/lib/bytecode_parser/CMakeLists.txt
+++ b/lib/bytecode_parser/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(bytecode_parser STATIC
         BytecodeParser.cpp
-        ParserContext.cpp
+        ParsingSession.cpp
         scenarios/InitStaticParser.cpp
         scenarios/FunctionParser.cpp
         scenarios/IfParser.cpp
