test: add comprehensive tests for BytecodeLexer functionality
This commit introduces a new test suite for the BytecodeLexer, covering various aspects such as whitespace handling, identifier recognition, number parsing, string handling, punctuation, and error management. The tests ensure that the lexer behaves correctly across a range of scenarios, including edge cases and combined input patterns. Additionally, the test suite is integrated into the CMake build system.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,10 +6,13 @@ add_executable(
         unit_tests.cpp
         test_functions.cpp
         test_suites/ProjectIntegrationTestSuite.cpp
+        test_suites/BytecodeLexerTestSuite.cpp
+        bytecode_lexer_tests.cpp
 )
 
 target_link_libraries(
         ${PROJECT_NAME}_tests
+        bytecode_lexer
         vm_ui
         GTest::gtest_main
 )
