feat: add PlaceholderJitExecutorFactory to manage JIT executor creation
This commit introduces the PlaceholderJitExecutorFactory class, which provides a method to create instances of PlaceholderJitExecutor. The CMakeLists.txt is updated to include the new factory source file, ensuring it is compiled as part of the executor library.

--- a/lib/executor/CMakeLists.txt
+++ b/lib/executor/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(executor STATIC
         PlaceholderJitExecutor.cpp
+        PlaceholderJitExecutorFactory.cpp
         BuiltinFunctions.cpp
         builtin_factory.cpp
 )
