--- a/lib/runtime/CMakeLists.txt
+++ b/lib/runtime/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(runtime STATIC
         VirtualTable.cpp
         VirtualTableRepository.cpp
         ObjectRepository.cpp
+        ByteArray.cpp
 )
 
 target_include_directories(runtime PUBLIC ${PROJECT_SOURCE_DIR})
