feat: add Executor class for program execution management with error handling

--- a/lib/executor/CMakeLists.txt
+++ b/lib/executor/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(executor STATIC
         PlaceholderJitExecutorFactory.cpp
         BuiltinFunctions.cpp
         builtin_factory.cpp
+        Executor.cpp
 )
 
 target_include_directories(executor PUBLIC ${PROJECT_SOURCE_DIR})
