feat: add mark-and-sweep gc implementation

--- a/lib/runtime/CMakeLists.txt
+++ b/lib/runtime/CMakeLists.txt
@@ -3,6 +3,8 @@ add_library(runtime STATIC
         VirtualTableRepository.cpp
         ObjectRepository.cpp
         ByteArray.cpp
+        MarkAndSweepGC.cpp
+        MemoryManager.cpp
 )
 
 target_include_directories(runtime PUBLIC ${PROJECT_SOURCE_DIR})
