--- a/lib/execution_tree/CMakeLists.txt
+++ b/lib/execution_tree/CMakeLists.txt
@@ -13,3 +13,7 @@ add_library(execution_tree STATIC
 target_include_directories(execution_tree PUBLIC ${PROJECT_SOURCE_DIR})
 
 target_link_libraries(execution_tree PUBLIC runtime)
+
+if(WIN32)
+    target_link_libraries(execution_tree PRIVATE psapi)
+endif()
