refactor: simplify reference scanning in MarkAndSweepGC and introduce ArrayReferenceScanner and DefaultReferenceScanner for improved memory management

--- a/lib/runtime/CMakeLists.txt
+++ b/lib/runtime/CMakeLists.txt
@@ -3,8 +3,10 @@ add_library(runtime STATIC
         VirtualTableRepository.cpp
         ObjectRepository.cpp
         ByteArray.cpp
-        gc/MarkAndSweepGC.cpp
         MemoryManager.cpp
+        gc/MarkAndSweepGC.cpp
+        gc/reference_scanners/ArrayReferenceScanner.cpp
+        gc/reference_scanners/DefaultReferenceScanner.cpp
 )
 
 target_include_directories(runtime PUBLIC ${PROJECT_SOURCE_DIR})
