config: add jit library

--- a/lib/executor/CMakeLists.txt
+++ b/lib/executor/CMakeLists.txt
@@ -7,4 +7,4 @@ add_library(executor STATIC
 )
 
 target_include_directories(executor PUBLIC ${PROJECT_SOURCE_DIR})
-target_link_libraries(executor PUBLIC runtime execution_tree tokens)
+target_link_libraries(executor PUBLIC runtime execution_tree tokens jit)
